<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.appslandia</groupId>
	<artifactId>appslandia-common</artifactId>
	<version>18.6.0</version>
	<name>appslandia-common</name>
	<packaging>jar</packaging>
	<description>AppsLandia Common - Java Utilities</description>
	<url>https://github.com/haducloc/appslandia-common</url>
	<properties>
		<module.name>com.appslandia.common</module.name>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
		<version.maven-jar-plugin>3.2.2</version.maven-jar-plugin>
		<version.maven-source-plugin>3.2.1</version.maven-source-plugin>
		<version.maven-javadoc-plugin>3.2.0</version.maven-javadoc-plugin>
		<version.maven-gpg-plugin>3.0.1</version.maven-gpg-plugin>
		<version.maven-surefire-plugin>3.0.0-M8</version.maven-surefire-plugin>
		<version.nexus-staging-maven-plugin>1.6.13</version.nexus-staging-maven-plugin>
		<version.gson>2.9.0</version.gson>
		<version.log4j-api>2.17.2</version.log4j-api>
		<version.cache-api>1.1.1</version.cache-api>
		<version.byte-buddy>1.14.3</version.byte-buddy>
		<version.jakarta-platform>10.0.0</version.jakarta-platform>
		<version.glassfish-jakarta-el>5.0.0-M1</version.glassfish-jakarta-el>
		<version.hibernate-validator>8.0.0.Final</version.hibernate-validator>
		<version.auth0-jwt>4.3.0</version.auth0-jwt>
		<version.fusionauth-jwt>5.2.2</version.fusionauth-jwt>
		<version.bouncy-castle-bcpkix>1.72</version.bouncy-castle-bcpkix>
		<version.junit-jupiter-api>5.9.2</version.junit-jupiter-api>
	</properties>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>
				https://github.com/haducloc/appslandia-common/blob/master/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Loc Ha</name>
			<email>haducloc13@gmail.com</email>
			<url>https://github.com/haducloc/appslandia-common</url>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/haducloc/appslandia-common.git</connection>
		<developerConnection>
			scm:git:https://github.com/haducloc/appslandia-common.git</developerConnection>
		<url>https://github.com/haducloc/appslandia-common.git</url>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.maven-compiler-plugin}</version>
				<configuration>
					<release>20</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${version.maven-jar-plugin}</version>
				<configuration>
					<archive>
						<addMavenDescriptor>true</addMavenDescriptor>
						<manifestEntries>
							<Automatic-Module-Name>${module.name}</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.maven-surefire-plugin}</version>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>release</id>
			<activation>
				<property>
					<name>release</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${version.maven-source-plugin}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${version.maven-javadoc-plugin}</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M8</version>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${version.nexus-staging-maven-plugin}</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${version.maven-gpg-plugin}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${version.gson}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${version.log4j-api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${version.log4j-api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-api</artifactId>
			<version>${version.jakarta-platform}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.cache</groupId>
			<artifactId>cache-api</artifactId>
			<version>${version.cache-api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${version.junit-jupiter-api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>${version.byte-buddy}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>${version.auth0-jwt}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.fusionauth</groupId>
			<artifactId>fusionauth-jwt</artifactId>
			<version>${version.fusionauth-jwt}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>${version.bouncy-castle-bcpkix}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${version.hibernate-validator}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>jakarta.el</artifactId>
			<version>${version.glassfish-jakarta-el}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${version.junit-jupiter-api}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
